# kumi_stack

./: README.md  fastdds.xml  kumi_debug_fixed.urdf  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
scripts/: kumi_install.sh
src/kumi_behavior/: package.xml  setup.cfg  setup.py
src/kumi_behavior/kumi_behavior/: bt_node.py  tree.py
src/kumi_bringup/: package.xml  setup.cfg  setup.py
src/kumi_bringup/launch/: isaac_bringup.launch.py  sim_bringup.launch.py
src/kumi_control/: package.xml  setup.cfg  setup.py
src/kumi_control/config/: trajectory_control_config.yaml
src/kumi_control/kumi_control/: PID_effort_controller.py  kumi_control_gui.py  kumi_seq_traj_controller.py  kumi_seq_traj_controller_keyboard.py  kumi_trajectory_controller.py
src/kumi_control/launch/: control.launch.py
src/kumi_control/moves/: bflip.csv
src/kumi_control/resource/: accovacciato.csv  backflip.csv  bflip_sx.csv  demo_flip_500.csv  flip.csv  flip_dx.csv  flip_sx.csv  rac.csv
src/kumi_description/: package.xml  setup.cfg  setup.py
src/kumi_description/launch/: description.launch.py
src/kumi_description/meshes/: Base V2.STL  Base V3.STL  Braccio A.STL  Braccio B.STL  (+16 more)
src/kumi_perception/: package.xml  setup.cfg  setup.py
src/kumi_sim/: package.xml  setup.cfg  setup.py
src/my_gz_gui_plugin/: CMakeLists.txt  README.md  package.xml
src/my_gz_gui_plugin/include/my_gz_gui_plugin/: MyGuiPlugin.hh
src/my_gz_gui_plugin/qml/: my_gz_gui_plugin.qml  qml.qrc
src/my_gz_gui_plugin/src/: MyGuiPlugin.cc
(+28 files in other folders)
