[tool.poetry]
name = "kumi_stack"
version = "0.1.0"
description = "ROS2 workspace for Kumi"
authors = ["andreas <andreas21steffens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2"
pyyaml = "^6.0"
jinja2 = "^3.1.0"
typeguard = "^4.0.0"
empy = "^3.3.4"
catkin-pkg = "^1.0.0"
lark = "^1.2.2"
py-trees = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
