<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_gz_gui_plugin</name>
  <version>0.1.0</version>
  <description>A reusable Gazebo Harmonic GUI plugin for robot control</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gz-gui8</depend>
  <depend>gz-transport13</depend>
  <depend>gz-msgs10</depend>
  <depend>gz-sim8</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
